--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
    <section id="contact" class="contact">
     <h2 style="color: yellow; text-shadow: 0 1px 3px rgba(0,0,0,0.5);">Contattami</h2>
     <p>Scrivimi per un preventivo gratuito o una consulenza.</p>
-    <form action="https://formsubmit.co/elioesonia@gmail.com" method="POST">
+    <form>
       <input type="text" name="name" placeholder="Nome" required>
       <input type="email" name="email" placeholder="Email" required>
       <textarea name="message" placeholder="Messaggio" rows="5" required></textarea>
@@ -97,3 +97,4 @@
   </footer>
 </body>
 </html>
+
