--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <input type="text" name="name" placeholder="Nome" required>
       <input type="email" name="email" placeholder="Email" required>
       <textarea name="message" placeholder="Messaggio" rows="5" required></textarea>
-      <button type="submit" class="btn">INVIA</button>
+      <a href="mailto:elioesonia@email.com?subject=Messaggio dal sito&body=Ciao Elio, !" class="btn">Invia Email</a>
       <input type="hidden" name="_captcha" value="false">
 <input type="hidden" name="_next" value="grazie.html">
     </form>
@@ -97,4 +97,5 @@
   </footer>
 </body>
 </html>
+
 
