--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <input type="text" name="name" placeholder="Nome" required>
       <input type="email" name="email" placeholder="Email" required>
       <textarea name="message" placeholder="Messaggio" rows="5" required></textarea>
-      <a href="mailto:elioesonia@email.com?subject=Messaggio dal sito&body=Ciao Elio, !" class="btn">Invia Email</a>
+     <button type="button" onclick="inviaEmail()" class="btn">Invia Email</button>
       <input type="hidden" name="_captcha" value="false">
 <input type="hidden" name="_next" value="grazie.html">
     </form>
@@ -110,6 +110,7 @@ function inviaEmail() {
   </footer>
 </body>
 </html>
+
 
 
 
